--- a/TARge21Shop/TARge21Shop/appsettings.json
+++ b/TARge21Shop/TARge21Shop/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=TARge21Shop;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-BRBHF8O;Database=TARge21Shop;Trusted_Connection=true;MultipleActiveResultSets=true"
   },
+  "EmailHost": "smtp.gmail.com",
+  "EmailUserName": "jyrivaitmaa@gmail.com",
+  "EmailPassword": "qnjiktecodruuuhb",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
